Wed Aug 06  Brian Cameron <Brian.Cameron@Sun.COM>

	* gui/Makefile.am: Remove any existing gdmXnest symbolic link before 
	  creating the new symbolic link.  Now make install doesn't fail
	  on Solaris when replacing an existing gdm2 install.

Mon Aug 04 15:05:26 2003  George Lebl <jirka@5z.com>

	* daemon/choose.c: fix crash when indirect display expires

	* daemon/gdm.c: call gdm_ensure_sanity on startup as well, seems like
	  a good place to ensure sanity too

	* daemon/xdmcp.c: fix checking auth string, fix debug messages

Mon Aug 04 13:43:29 2003  George Lebl <jirka@5z.com>

	* daemon/misc.c: Fixed #118878 by actually ensuring the /tmp/.ICE-unix
	  permissions.

Mon Aug 04 09:20:06 2003  George Lebl <jirka@5z.com>

	* config/gdm, config/gdm-autologin: Don't unclude the /lib/security
	  dir for the pam modules and just let pam locate things on its own

	* daemon/errorgui.[ch], daemon/gdm.c, daemon/slave.c: Use the gtk
	  resource file for the greeters in the errorgui to get the same
	  GTK theme going here, instead of gdm run the post session error
	  dialog as the user for whom it is running, and run the post session
	  error dialog before the session stop again since the home dir might
	  not be present after the session stopped.

Fri Aug 01 11:19:50 2003  George Lebl <jirka@5z.com>

	* daemon/gdm.c: the SIGABRT handler cannot use the mainloop as
	  it can never return.

Fri Aug 01 11:06:37 2003  George Lebl <jirka@5z.com>

	* daemon/misc.[ch]: first get initial rlimits and use those
	  when restoring limits.  Should fix errors where root limits
	  are set low and we jack them up uselessly or when someone
	  wants to limit the gdm process.

	* daemon/gdm.c, daemon/slave.c: ignore SIGPWR, restart on
	  SIGXCPU and SIGXFSZ, and cleanly exit on SIGABRT (which
	  could come from glib).  Slave only ignores SIGPWR
	  otherwise since we handle slave crashes properly.  Also
	  print error to the log rather then just debug when child