@@ -1,3 +1,9 @@
+Wed Aug 06 11:39:37 2003  George Lebl <jirka@5z.com>
+
+	* docs/C/gdm.xml: some fixes from my mailspool from like
+	  a year ago, plus added section about terminal lab
+	  example setups
+
 Wed Aug 06  Brian Cameron <Brian.Cameron@Sun.COM>
 
 	* gui/Makefile.am: Remove any existing gdmXnest symbolic link before 
@@ -20,7 +26,7 @@ Mon Aug 04 13:43:29 2003  George Lebl <jirka@5z.com>
 
 Mon Aug 04 09:20:06 2003  George Lebl <jirka@5z.com>
 
-	* config/gdm, config/gdm-autologin: Don't unclude the /lib/security
+	* config/gdm, config/gdm-autologin: Don't include the /lib/security
 	  dir for the pam modules and just let pam locate things on its own
 
 	* daemon/errorgui.[ch], daemon/gdm.c, daemon/slave.c: Use the gtk
